Fix post display bug on mobile

--- a/src/pages/posts/posts.module.css
+++ b/src/pages/posts/posts.module.css
@@ -14,12 +14,14 @@
   color: #ffffff;
   font-family: 'grenze';
   font-size: 2rem;
+  font-weight: normal;
 }
 
 .postDate {
   color: #ffffff;
   font-family: 'grenze';
   font-size: 2rem;
+  font-weight: normal;
 }
 
 .postContent {
@@ -27,10 +29,11 @@
   font-family: 'grenze';
   font-size: 1.5rem;
   margin-top: 2rem;
+  padding: 0 12px;
 }
 
 .imageWrapper {
   display: block;
-  width: 500px;
+  width: 400px;
   height: auto;
 }
